<resources>
    <string name="app_name" translatable="false">LiFumetti</string>
    <string name="loginExecText">Login</string>
    <string name="toRegisterText">Register now!</string>
    <string name="toRegisterHint">Don\'t have an account yet?</string>
    <string name="registerExec">Register</string>
    <string name="toLoginHint">Already have an account?</string>
    <string name="toLoginText">Back to login</string>
    <string name="registerPWCreate">Create password</string>
    <string name="registerPWConfirm">Confirm password</string>
    <string name="loginEmail">E-mail</string>
    <string name="loginPW">Password</string>
    <string name="registerEmail">Enter e-mail</string>
    <string name="successLogin">Logged in succesfully</string>
    <string name="successRegister">Registered succesfully</string>
    <string name="failedLogin">Credentials not matching</string>
    <string name="pwNotMatchingRegister">Passwords do not match</string>
    <string name="dbError">Error with the database</string>
    <string name="menuHomeLabel">Home</string>
    <string name="menuSearchLabel">Search</string>
    <string name="menuProfileLabel">Profile</string>
    <string name="credentialsNotFoundLogin">Credentials not found</string>
    <string name="admin_code" translatable="false">8520</string>
    <string name="emailPatternMismatch">Email pattern incorrect</string>
    <string name="adminPopupHint">Insert admin code</string>
    <string name="adminPopupConfirm">Confirm</string>
    <string name="registerAdminCheck">Request an administrator account</string>
    <string name="admin_yes_profilo">Yes</string>
    <string name="admin_no_profilo">No</string>
    <string name="user_information_label">User informations</string>
    <string name="administrator_profile">Administrator</string>
    <string name="fumettoAvailableText">Available</string>
    <string name="fumettoNotAvailableText">Not available</string>
    <string name="fumettoBookedText">Booked</string>
    <string name="noFumettoFound">Search produced no results</string>
    <string name="editUserButton">Edit user</string>
    <string name="deleteUserButton">Delete user</string>
    <string name="updatedPasswordHint">New password</string>
    <string name="userUpdateSuccesful">User data updated</string>
    <string name="userUpdateError">Error on db</string>
    <string name="updteUserDataHint">Update user data:</string>
    <string name="deleteUserWarning">Are you sure you want to delete:</string>
    <string name="deleteUserConfirm">Yes, I\'m sure</string>
    <string name="passwordLostText">Forgot your password? Contact us at:</string>
    <string name="adminEmail" translatable="false">admin@lifumetti.outlook.com</string>
    <string name="mancoListLabel">From series you\'ve been reading lately:</string>
    <string name="availableListLabel">Now available:</string>
    <string name="CurrentlyYoursLabel">Currently yours:</string>
    <string name="wrongAdminCode">Wrong code</string>
</resources>